--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development ts-node-dev --no-notify --respawn --transpile-only src/index"
+    "dev:demo": "cross-env NODE_ENV=development ts-node-dev --no-notify --respawn --transpile-only src/demo"
   },
   "devDependencies": {
     "@types/node": "^20.1.2",
